2006-01-22 07:02:06  Sean Middleditch <elanthis@awesomeplay.com>

  * Minor documentation additions.
  * Remove builder vision.  We so don't use that crap.
  * Removed script-intr.xml to bindings.xml.
  * Renamed common/awestr.h to common/string.h, common/aweregex.h
    to common/regex.h, and scriptix/sxstring.h to scriptix/string.h.

2006-01-21 16:41:15  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove dependency on libtool.  We don't actually build any
    libraries, so we don't need it.

2006-01-21 16:31:50  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed the chpass command, trying to remove the IProcessor
    stuff, it's unclean.
  * Don't build-depend on bison, flex, or xsltproc.  Only people
    wanting to hack on the source will need those utilities.
    This makes installing AweMUD a lot easier, especially on
    older/non-gnu systems.

2006-01-21 04:56:03  Sean Middleditch <elanthis@awesomeplay.com>

  * OS X 10.3's compiler was being a dork, these fixes make it
    stop being a dork, which makes me happy.

2006-01-21 04:30:48  Sean Middleditch <elanthis@awesomeplay.com>

  * Darwin/OS X requires sys/types.h to be included before regex.h.

2006-01-21 03:14:56  Sean Middleditch <elanthis@awesomeplay.com>

  * Make all accept()ed sockets non-blocking.
  * Remove include/scriptix/scriptix.h.
  * Remove the -Iinclude/common -Iinclude/mud -Iinclude/scriptix
    compile flags, forcing all includes to specify the source
    module.
  * Move a few source files from src/mud to src/common.

2006-01-20 21:18:24  Sean Middleditch <elanthis@awesomeplay.com>

  * Add missing doc/ch-introduction.xml file.

2006-01-20 21:04:33  Sean Middleditch <elanthis@awesomeplay.com>

  * Use inet_pton if getnameinfo isn't available. (Cygwin)
  * Don't check for socklen_t, we always screw the check up, and
    all our target platforms have it.  (Cygwin/MacOS X 10.3/Solaris)
  * Use fcntl with O_NONBLOCK instead of the MSG_DONTWAIT flag.
    (Cygwin)