@@ -1,5 +1,0 @@
-# AweMUD Next Generation - Default game time
-# Copyright (C) 2003-2005  AwesomePlay Productions Inc.
-# Sean Middleditch <elanthis@awemud.net>
-
-current = "897/3/1 1.481"
